# belayr-api-rs

./: .env.example  Cargo.toml
migrations/2023-10-18-063002_profiles/: up.sql
migrations/2023-10-18-063015_friends/: up.sql
migrations/2023-10-18-063032_climb_locations/: up.sql
migrations/2023-10-18-063107_climb_location_disciplines/: up.sql
migrations/2023-10-18-063142_user_disciplines/: up.sql
migrations/2023-10-18-063206_sessions/: up.sql
migrations/2023-10-18-063211_session_participants/: up.sql
migrations/2023-10-18-063224_preferred_locations/: up.sql
migrations/2023-10-18-063401_initial_foreign_keys/: up.sql
src/: main.rs  models.rs  schema.rs
src/controllers/: goodbye.rs  hello.rs  locations.rs  mod.rs  profiles.rs  sessions.rs
src/models/: database_models.rs  generic_models.rs  location_models.rs  mod.rs  profile_models.rs  session_models.rs
src/repositories/: base_repo.rs  location_repo.rs  mod.rs  profile_repo.rs  session_repo.rs
src/util/: common.rs  logging.rs
