[package]
name = "belayr-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-test = "12.5.1"
serde = { version = "1.0.189", features = ["derive"] }
tokio = {version = "1.33.0", features = ["full"]}
dotenv = "0.15.0"
diesel = "2.1.3"
