[package]
name = "belayr-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing"] }
axum-test = "12.5.1"
serde = { version = "1.0.189", features = ["derive"] }
tokio = {version = "1.33.0", features = ["full"]}
dotenv = "0.15.0"
diesel = "2.1.3"
deadpool-diesel = "0.5.0"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace"] }
