[package]
name = "belayr-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing"] }
axum-test = "12.5.1"
serde = { version = "1.0.189", features = ["derive"] }
tokio = {version = "1.33.0", features = ["full"]}
dotenv = "0.15.0"
diesel = { version = "2.1.3", features = ["postgres", "chrono", "uuid"] }
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-http = { version = "0.4.4", features = ["trace"] }
diesel_migrations = "2.1.0"
diesel-async = { version = "0.4.1", features = ["bb8", "postgres"] }
bb8 = "0.8.1"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
okapi = "0.4.0"
